gitops/production/apps/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: bminfo
spec:
  selector:
    app.kubernetes.io/name: web
  ports:
  - name: p8000-tcp
    port: 8000
    targetPort: 8000
    protocol: TCP
